Gravando e recuperando despesas do Firebase, e somando ao total. Campos em branco também foram validados, no momento de gravar uma despesa.

--- a/app/src/main/res/layout/activity_despesas.xml
+++ b/app/src/main/res/layout/activity_despesas.xml
@@ -105,6 +105,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_confirmar_branco" />
+        app:srcCompat="@drawable/ic_confirmar_branco"
+        android:onClick="salvarDespesa"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
