Adicionada a função de inserir uma receita e despesa, com somatório de ambas.

--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -28,31 +28,34 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="10dp"
-        fab:menu_icon="@drawable/ic_add_branco"
-        app:menu_colorNormal="@color/colorAccent"
-        app:menu_colorPressed="@color/colorAccent"
-        >
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        fab:layout_constraintBottom_toBottomOf="parent"
+        fab:layout_constraintEnd_toEndOf="parent"
+        fab:menu_colorNormal="@color/colorAccent"
+        fab:menu_colorPressed="@color/colorAccent"
+        fab:menu_icon="@drawable/ic_add_branco">
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/menu_despesa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="adicionarDespesa"
-            app:srcCompat="@drawable/ic_remove_branco"
             fab:fab_colorNormal="@color/colorPrimaryDespesa"
             fab:fab_label="Despesa"
-            fab:fab_size="mini" />
+            fab:fab_size="mini"
+            fab:srcCompat="@drawable/ic_remove_branco" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/menu_receita"
-            android:onClick="adicionarReceita"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_add_branco"
+            android:onClick="adicionarReceita"
             fab:fab_colorNormal="@color/colorPrimaryReceita"
             fab:fab_label="Receita"
             fab:fab_size="mini"
-            />
+            fab:srcCompat="@drawable/ic_add_branco" />
 
     </com.github.clans.fab.FloatingActionMenu>
 
