Correção de bugs, e implementação do resumo de valores atualizado.

--- a/app/src/main/res/layout/activity_despesas.xml
+++ b/app/src/main/res/layout/activity_despesas.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,7 +11,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="120dp"
-        android:background="@color/colorPrimaryDespesa"
+        android:background="@color/colorAccentDespesa"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="10dp"
@@ -49,7 +50,7 @@
             android:id="@+id/editDescricao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="ex: Salário Mensal" />
+            android:hint="ex: Aluguel Mensal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -93,7 +94,7 @@
             android:id="@+id/editCategoria"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="ex: Salário" />
+            android:hint="ex: Aluguel" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -102,10 +103,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:onClick="salvarDespesa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_confirmar_branco"
-        android:onClick="salvarDespesa"/>
+        app:srcCompat="@drawable/ic_confirmar_branco" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
